syntax = "proto3";
package shremdup;

service Shremdup {
  rpc ListDisplays (ListDisplaysRequest) returns (ListDisplaysReply);
  rpc GetDisplay(GetDisplayRequest) returns (GetDisplayReply);
  rpc CreateCapture(CreateCaptureRequest) returns (CreateCaptureReply);
  rpc DeleteCapture(DeleteCaptureRequest) returns (DeleteCaptureReply);
  rpc TakeCapture(TakeCaptureRequest) returns (TakeCaptureReply);
}

message ListDisplaysRequest {
}
message ListDisplaysReply {
  repeated DisplayInfo infos = 1;
}

message GetDisplayRequest {
  uint32 id = 1;
}
message GetDisplayReply {
  DisplayInfo info = 1;
}

message CreateCaptureRequest {
  uint32 id = 1;
  string name = 2;
  bool open = 3;
}
message CreateCaptureReply {
}

message DeleteCaptureRequest {
  uint32 id = 1;
}
message DeleteCaptureReply {
}

message TakeCaptureRequest {
  uint32 id = 1;
}
message TakeCaptureReply {
  bool desktop_updated = 1;
  optional PointerPosition pointer_position = 2;
  optional PointerShape pointer_shape = 3;
}

message DisplayInfo {
  int32 bottom = 1;
  int32 top = 2;
  int32 left = 3;
  int32 right = 4;
  string name = 5;
  int32 rotation = 6;
  uint32 pixel_width = 7;
  uint32 pixel_height = 8;
  bool is_primary = 9;
}

message PointerPosition {
  bool visible = 1;
  int32 x = 2;
  int32 y = 3;
}

message PointerShape {
  uint32 shape_type = 1;
  uint32 width = 2;
  uint32 height = 3;
  uint32 pitch = 4;
  bytes data = 5;
}